# lattice

./: .gitignore  CHANGELOG.ko.md  CHANGELOG.md  Cargo.toml  LICENSE  README.ko.md  README.md  TODO.md  _typos.toml  deny.toml
.github/workflows/: ci.yml
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: main.rs
crates/lattice-cli/tests/: cli_smoke.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: app_catalog.rs  config.rs  hooks.rs  lib.rs  manifest.rs  ops.rs  preset.rs  scanner.rs  secrets.rs
docs/: README.ko.md  README.md
docs/dev/: quality.ko.md  quality.md
docs/llm/: README.md  branch-release-policy.md  kanban-workflow.md
docs/product/: mvp-scope.ko.md  mvp-scope.md
docs/reference/: json-output.ko.md  json-output.md
docs/superpowers/plans/: 2026-05-20-lattice-mvp.md  2026-05-21-lattice-v0.2-light.md
docs/superpowers/specs/: 2026-05-20-lattice-mvp-design.md
docs/user/: usage.ko.md  usage.md
scripts/: real-home-readonly-health-check.sh
src/: config.rs  hooks.rs  lib.rs  main.rs  ops.rs  paths.rs  preset.rs
tests/: cli_smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
