[package]
name = "lattice"
version = "0.2.0"
edition = "2024"
description = "A small XDG-aware dotfiles backup and restore manager."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jukqaz/lattice"
keywords = ["dotfiles", "backup", "restore", "xdg", "codex"]
categories = ["command-line-utilities", "config"]

[workspace]
members = [".", "xtask"]
resolver = "3"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
