[workspace]
members = [
  "crates/lattice-cli",
  "crates/lattice-core",
  "xtask",
]
default-members = ["crates/lattice-cli"]
resolver = "3"

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jukqaz/lattice"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
wildcard_imports = "warn"
large_enum_variant = "warn"
manual_assert = "warn"
manual_let_else = "warn"
